add: add navbar logo and link. fix: title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destination</title>
+    <title>Destinations</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="./assets/img/logo.png" alt="logo destinations">
+            <a href="#" class="nav-link">Paris</a>
+            <a href="#" class="nav-link">Tokyo</a>
+            <a href="#" class="nav-link">New York</a>
+        </nav>
+    </header>
 </body>
 </html>
