feat: style, css link. add: multiple id and class in html, kit ui and font face

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="./assets/img/logo.png" alt="logo destinations">
-            <a href="#" class="nav-link">Paris</a>
-            <a href="#" class="nav-link">Tokyo</a>
-            <a href="#" class="nav-link">New York</a>
-        </nav>
+        <div class="container">
+            <nav>
+                <div>
+                    <img src="./assets/img/logo.png" alt="logo destinations" id="logo"></div>
+                <div id="nav-a">
+                    <a href="#" class="nav-link">Paris</a>
+                    <a href="#" class="nav-link">Tokyo</a>
+                    <a href="#" class="nav-link">New York</a>
+                </div>
+            </nav>
+        </div>
+        
     </header>
 </body>
 </html>
