add: main section paris

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
                 </div>
             </nav>
         </div>
-        
     </header>
+    <main>
+        <section>
+            <img src="./assets/img/paris.jpg" alt="">
+            <h2>Paris</h2>
+            <p>La Ville Lumiere est reputee pour son art, sa gastronomie et sa culture. Decouvrez la Tour Eifel, le louvre et la cuisine francaise.</p>
+            <p>Ne manquez pas de visiter Montmartre, le quartier des artistes, et de profiter de la vue panoramique depuis le Sacre-Coeur.</p>
+            <a href="#" class="btn btn-paris">Explorer Paris</a>
+        </section>
+    </main>
 </body>
 </html>
