--- a/index.html
+++ b/index.html
@@ -11,22 +11,43 @@
         <div class="container">
             <nav>
                 <div>
-                    <img src="./assets/img/logo.png" alt="logo destinations" id="logo"></div>
-                <div id="nav-a">
-                    <a href="#" class="nav-link">Paris</a>
-                    <a href="#" class="nav-link">Tokyo</a>
-                    <a href="#" class="nav-link">New York</a>
+                    <img src="./assets/img/logo.png" alt="logo destinations" id="logo">
                 </div>
+                <ul id="nav-a">
+                    <li><a href="#" class="nav-link">Paris</a></li>
+                    <li><a href="#" class="nav-link">Tokyo</a></li>
+                    <li><a href="#" class="nav-link">New York</a></li>
+                </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section>
-            <img src="./assets/img/paris.jpg" alt="">
-            <h2>Paris</h2>
-            <p>La Ville Lumiere est reputee pour son art, sa gastronomie et sa culture. Decouvrez la Tour Eifel, le louvre et la cuisine francaise.</p>
-            <p>Ne manquez pas de visiter Montmartre, le quartier des artistes, et de profiter de la vue panoramique depuis le Sacre-Coeur.</p>
-            <a href="#" class="btn btn-paris">Explorer Paris</a>
+        <section class="container">
+            <div class="card">
+                <div class="img-container">
+                    <img src="./assets/img/paris.jpg" alt="la tour eifel" class="img-card">
+                </div>
+                <h2>Paris</h2>
+                <p>La Ville Lumiere est reputee pour son art, sa gastronomie et sa culture. Decouvrez la Tour Eifel, le louvre et la cuisine francaise.</p>
+                <p>Ne manquez pas de visiter Montmartre, le quartier des artistes, et de profiter de la vue panoramique depuis le Sacre-Coeur.</p>
+                <a href="#" class="btn btn-paris">Explorer Paris</a>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="./assets/img/tokyo.jpg" alt="le mont fuji" class="img-card">
+                </div>
+                <h2>Tokyo</h2>
+                <p>Eplorez l'energie et la culture fascinante de Tokyo, avec ses temples anciens, sa cuisine delicieuse et ses quartiers modernes.</p>
+                <a href="#" class="btn btn-tokyo">Explorer Tokyo</a>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="./assets/img/new-york.jpeg" alt="celebre ponts de new york" class="img-card">
+                </div>
+                <h2>New York</h2>
+                <p>La Ville qui ne dort jamais vous offre des gratte-ciel impressionnants, des spectacles a Broadway et des parcs magnifiques.</p>
+                <a href="#" class="btn btn-newyork">Explorer New York</a>
+            </div>
         </section>
     </main>
 </body>
